# rport

./: .gitignore  Cargo.toml  LICENSE  dirtree.md  readme.md
benchmarks/: run_all_benchmarks.sh
benchmarks/results/: cloudflared_tcp_throughput.json  nginx_concurrent_conn.txt  rport_concurrent_conn.txt  rport_tcp_throughput.json  socat_concurrent_conn.txt
benchmarks/scripts/: concurrent_conn_test.sh  http_throughput.sh  latency_test.sh  memory_usage.sh  tcp_throughput.sh
benchmarks/simple/: benchmark.sh
benchmarks/simple/results/: results_20250511_125315.md
examples/www/: index.html
src/: config.rs  lib.rs  logging.rs  main.rs  tls.rs  tunnel.rs
tests/: integration.rs
