[package]
name = "rport"
version = "0.1.0"
edition = "2021"

[lib]
name = "rport"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

[features]
tls = ["rustls", "tokio-rustls", "rustls-pemfile"]